--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <title>CSUST DCN Lab | Homepage</title>
 
 <link rel="icon" href="/favicon/favicon-32x32.png" type="image/x-icon">
-<link rel="stylesheet" href="css/main.min.css" media="screen">
-<link rel="stylesheet" href="css/custom.css" media="screen">
+<link rel="stylesheet" href="main.min.css" media="screen">
+<link rel="stylesheet" href="custom.css" media="screen">
 
 <!--Made with Geekdoc theme https://github.com/xoxys/hugo-geekdoc-->
 
@@ -114,23 +114,23 @@ Network Systems and etc.</p>
 <details open="" style="margin-bottom: 10px;">
     <summary><b>Journal papers</b></summary>
     <ul>
-        <li style="padding: 2px 0px;"> Jin Wang, <span>&nbsp;</span><u>Ying Liu</u>, Shuying Rao, Xinyu Zhou, Jinbin Hu*.  A Novel Self-adaptive Multi-strategy Artificial Bee Colony Algorithm for Coverage Optimization in Wireless Sensor Networks. <em><strong>Ad Hoc Networks 2023</strong></em><span>&nbsp;</span><a href="file/liuying-Ad Hoc Networks-2023.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
+        <li style="padding: 2px 0px;"> Jin Wang, <span>&nbsp;</span><u>Ying Liu</u>, Shuying Rao, Xinyu Zhou, Jinbin Hu*.  A Novel Self-adaptive Multi-strategy Artificial Bee Colony Algorithm for Coverage Optimization in Wireless Sensor Networks. <em><strong>Ad Hoc Networks 2023</strong></em><span>&nbsp;</span><a href="liuying-Ad Hoc Networks-2023.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
     </ul>
 
     <ul>
-        <li style="padding: 2px 0px;"> Jin Wang, <span>&nbsp;</span><u>Shuying Rao</u>, Liu Ying, Pradip Kumar Sharma,Jinbin Hu*.  Load Balancing for Heterogeneous Traffic in Datacenter Networks. <em><strong>Journal of Network and Computer Applications 2023</strong></em><span>&nbsp;</span><a href="file/liuying-Ad Hoc Networks-2023.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
+        <li style="padding: 2px 0px;"> Jin Wang, <span>&nbsp;</span><u>Shuying Rao</u>, Liu Ying, Pradip Kumar Sharma,Jinbin Hu*.  Load Balancing for Heterogeneous Traffic in Datacenter Networks. <em><strong>Journal of Network and Computer Applications 2023</strong></em><span>&nbsp;</span><a href="liuying-Ad Hoc Networks-2023.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
     </ul>
 
     <ul>
-        <li style="padding: 2px 0px;"> Jin Wang, <span>&nbsp;</span><u>Ying Liu</u>, Shuying Rao, R. Simon Sherratt and Jinbin Hu*. Enhancing Security by Using GIFT and ECC Encryption Method in Multi-Tenant Datacenters. <em><strong>Computers, Materials & Continua 2023</strong></em><span>&nbsp;</span><a href="file/liuying-CMC-2023.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
+        <li style="padding: 2px 0px;"> Jin Wang, <span>&nbsp;</span><u>Ying Liu</u>, Shuying Rao, R. Simon Sherratt and Jinbin Hu*. Enhancing Security by Using GIFT and ECC Encryption Method in Multi-Tenant Datacenters. <em><strong>Computers, Materials & Continua 2023</strong></em><span>&nbsp;</span><a href="liuying-CMC-2023.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
     </ul>
 
     <ul>
-        <li style="padding: 2px 0px;"> Jin Wang, <span>&nbsp;</span><u>Dongzhi Yuan</u>, Wangqing Luo, Shuying Rao, R. Simon Sherratt, Jinbin Hu*. Congestion Control Using In-Network Telemetry for Lossless Datacenters CMC-Computer. <em><strong>Computers, Materials & Continua 2023</strong></em><span>&nbsp;</span><a href="file/liuying-Ad Hoc Networks-2023.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
+        <li style="padding: 2px 0px;"> Jin Wang, <span>&nbsp;</span><u>Dongzhi Yuan</u>, Wangqing Luo, Shuying Rao, R. Simon Sherratt, Jinbin Hu*. Congestion Control Using In-Network Telemetry for Lossless Datacenters CMC-Computer. <em><strong>Computers, Materials & Continua 2023</strong></em><span>&nbsp;</span><a href="liuying-Ad Hoc Networks-2023.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
     </ul>
 
     <ul>
-        <li style="padding: 2px 0px;"> Jin Wang, <span>&nbsp;</span><u>Yi He</u>, Wangqing Luo , Shuying Rao , and Jinbin Hu*. A Novel Load Balancing Scheme based on PFC Prediction in Lossless Datacenter Networks. <em><strong>in Human-centric Computing and information Sciences 2022</strong></em><span>&nbsp;</span><a href="file/liuying-Ad Hoc Networks-2023.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
+        <li style="padding: 2px 0px;"> Jin Wang, <span>&nbsp;</span><u>Yi He</u>, Wangqing Luo , Shuying Rao , and Jinbin Hu*. A Novel Load Balancing Scheme based on PFC Prediction in Lossless Datacenter Networks. <em><strong>in Human-centric Computing and information Sciences 2022</strong></em><span>&nbsp;</span><a href="liuying-Ad Hoc Networks-2023.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
     </ul>
 
 </details>
@@ -139,18 +139,17 @@ Network Systems and etc.</p>
   <summary><b>Conference papers</b></summary>
   <ul>
     
-    <li style="padding: 2px 0px;"> Jinbin Hu, <span>&nbsp;</span><u>Yi He</u>, Jin Wang*, Wangqing Luo, Jiawei Huang. RLB: Reordering-Robust Load Balancing in Lossless Datacenter Networks. <em><strong>IEEE ICPP 2023.</strong></em><span>&nbsp;</span><a href="file/liuying-Ad Hoc Networks-2023.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
+    <li style="padding: 2px 0px;"> Jinbin Hu, <span>&nbsp;</span><u>Yi He</u>, Jin Wang*, Wangqing Luo, Jiawei Huang. RLB: Reordering-Robust Load Balancing in Lossless Datacenter Networks. <em><strong>IEEE ICPP 2023.</strong></em><span>&nbsp;</span><a href="liuying-Ad Hoc Networks-2023.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
 
 
-    <li style="padding: 2px 0px;">Jinbin Hu, <span>&nbsp;</span><u>Ying Liu</u>, Shuying Rao, Jing Wang and Dengyong Zhang*. Enabling Traffic-differentiated Load Balancing for Datacenter Networks
-    . <em><strong>ICA3PP 2023.</strong></em><span>&nbsp;</span><a href="file/liuying-Ad Hoc Networks-2023.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
+    <li style="padding: 2px 0px;">Jinbin Hu, <span>&nbsp;</span><u>Ying Liu</u>, Shuying Rao, Jing Wang and Dengyong Zhang*. Enabling Traffic-differentiated Load Balancing for Datacenter Networks. <em><strong>ICA3PP 2023.</strong></em><span>&nbsp;</span><a href="liuying-Ad Hoc Networks-2023.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
 
 
-    <li style="padding: 2px 0px;">Jinbin Hu, <span>&nbsp;</span><u>Wangqing Luo</u>, Yi He, Jing Wang and Dengyong Zhang*. Deep Reinforcement Learning based Load Balancing for Heterogeneous Traffic in Datacenter Networks. <em><strong>ICA3PP 2023.</strong></em><span>&nbsp;</span><a href="file/liuying-Ad Hoc Networks-2023.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
+    <li style="padding: 2px 0px;">Jinbin Hu, <span>&nbsp;</span><u>Wangqing Luo</u>, Yi He, Jing Wang and Dengyong Zhang*. Deep Reinforcement Learning based Load Balancing for Heterogeneous Traffic in Datacenter Networks. <em><strong>ICA3PP 2023.</strong></em><span>&nbsp;</span><a href="liuying-Ad Hoc Networks-2023.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
 
-    <li style="padding: 2px 0px;">Jinbin Hu, <span>&nbsp;</span><u>Man He</u>, Shuying Rao, Yue Wang, Jing Wang and Shiming He*. Adaptive Routing for Datacenter Networks Using Ant Colony Optimization. <em><strong>ICA3PP 2023.</strong></em><span>&nbsp;</span><a href="file/liuying-Ad Hoc Networks-2023.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
+    <li style="padding: 2px 0px;">Jinbin Hu, <span>&nbsp;</span><u>Man He</u>, Shuying Rao, Yue Wang, Jing Wang and Shiming He*. Adaptive Routing for Datacenter Networks Using Ant Colony Optimization. <em><strong>ICA3PP 2023.</strong></em><span>&nbsp;</span><a href="liuying-Ad Hoc Networks-2023.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
 
-    <li style="padding: 2px 0px;">Jinbin Hu, <span>&nbsp;</span><u>Youyang Wang</u>, Shuying Rao, Zikai Zhou, Shuying Rao, Rundong Xin, Jing Wang and Shiming He*. HAECN: Hierarchical Automatic ECN Tuning with Ultra-low Overhead in Datacenter Networks. <em><strong>ICA3PP 2023.</strong></em><span>&nbsp;</span><a href="file/liuying-Ad Hoc Networks-2023.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
+    <li style="padding: 2px 0px;">Jinbin Hu, <span>&nbsp;</span><u>Youyang Wang</u>, Shuying Rao, Zikai Zhou, Shuying Rao, Rundong Xin, Jing Wang and Shiming He*. HAECN: Hierarchical Automatic ECN Tuning with Ultra-low Overhead in Datacenter Networks. <em><strong>ICA3PP 2023.</strong></em><span>&nbsp;</span><a href="liuying-Ad Hoc Networks-2023.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
 
 
 
