--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@ network systems.</p>
 Network Systems and etc.</p>
 <p><strong>常年招收硕士生和本科生, 热烈欢迎有读博意愿的优秀同学加入.</strong></p>
 <p>Email: <a href="mailto:jinbinhu@csust.edu.cn">jinbinhu@csust.edu.cn</a></p>
+<p>主页:  <a href="https://huhuzizi.github.io/jinbinhu.github.io/index.html">胡晋彬导师github主页</a>
 </div>
 <br clear="left" />
 <div class="gdoc-page__anchorwrap"><h2 id="research"><strong>Papers:</strong><a data-clipboard-text="" class="gdoc-page__anchor gdoc-page__anchor--right clip" aria-label="Anchor <strong>Papers:</strong>" href="#Papers"><svg class="icon link"><use xlink:href="#link"></use></svg></a></h2></div>
@@ -169,9 +170,14 @@ Network Systems and etc.</p>
     <li><strong>研二：</strong>刘颖(Ying Liu), 周子凯(Zikai Zhou)</li>
     <li><strong>研一：</strong>王友杨(Youyang Wang), 彭宇杰(Yujie Peng), 申厚强(Houqiang Shen), 邓雨生(Yusheng Deng), 智睿(Rui Zhi)</li>
 </ul>
-<!-- <p>何熠(Yi He), 罗望卿(Wangqing Luo), 饶淑莹(Shuying Rao), 贺蔓(Man He), 刘颖(Ying Liu), 周子凯(Zikai Zhou), 王友杨(Youyang Wang), 彭宇杰(Yujie Peng), 申厚强(Houqiang Shen), 邓雨生(Yusheng Deng), 智睿(Rui Zhi)</p> -->
+
 <div class="gdoc-page__anchorwrap"><h2 id="fundings"><strong>Fundings:</strong><a data-clipboard-text="" class="gdoc-page__anchor gdoc-page__anchor--right clip" aria-label="Anchor <strong>Fundings:</strong>" href="#fundings"><svg class="icon link"><use xlink:href="#link"></use></svg></a></h2></div>
 <ul>
+    <li>国家自然科学基金青年科学基金项目, 62102046, 基于PFC优先级流控的数据中心无损网络传输控制机制, 2022.01–2024.12, 主持;</li>
+
+    <li>湖南省自然科学基金面上项目, 2022JJ30618, 面向分布式深度神经网络(DNN)的通信优化技术研究，2022.01.1–2024.12.31, 主持;</li>
+
+    <li>湖南省教育厅青年项目, 22B0300, 数据中心无损网络负载均衡机制研究，2023.1.1～2025.12.31, 主持;</li>
 </ul>
 
 
