--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@
 <div style="float:left; clear:both;" align="left">
 <img src="\cover.jpg" alt="cover" style="zoom:15%;" align=right hspace="5" vspace="5"/>
 <p>Jinbin Hu received the B.E. and M.E. degrees from Beijing Jiao Tong University, China, in 2008 and 2011, respectively, and the Ph.D. degree in computer science from Central South University, China, in 2020. She is currently a Post-Doc in the Department of Computer Science and Engineering,
-Hong Kong University of Science and Technology, and working in the School of Computer and Communication Engineering, Changsha University of Science and Technology, China. Her current research interests are in the area of datacenter networks, RDMA networking and learning-based
-network systems.</p>
+Hong Kong University of Science and Technology, and working in the School of Computer and Communication Engineering, Changsha University of Science and Technology, China. </p>
 <p><strong>Research Area</strong>: Datacenter Networks, RDMA Networking, Learning-based
 Network Systems and etc.</p>
 <p><strong>常年招收硕士生和本科生, 热烈欢迎有读博意愿的优秀同学加入.</strong></p>
