--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ Hong Kong University of Science and Technology, and working in the School of Com
 <p><strong>Research Area</strong>: Datacenter Networks, RDMA Networking, Learning-based
 Network Systems and etc.</p>
 <p><strong>常年招收硕士生和本科生, 热烈欢迎有读博意愿的优秀同学加入.</strong></p>
-<p><a href="https://huhuzizi.github.io/jinbinhu.github.io/index.html">胡晋彬主页&nbsp;&nbsp;Email: <a href="mailto:jinbinhu@csust.edu.cn">jinbinhu@csust.edu.cn</a></a>
+<p><a href="https://huhuzizi.github.io/jinbinhu.github.io/index.html">胡晋彬主页</a>&nbsp;&nbsp;Email: <a href="mailto:jinbinhu@csust.edu.cn">jinbinhu@csust.edu.cn</a>
 </div>
 <br clear="left" />
 <div class="gdoc-page__anchorwrap"><h2 id="research"><strong>Publications:</strong><a data-clipboard-text="" class="gdoc-page__anchor gdoc-page__anchor--right clip" aria-label="Anchor <strong>Papers:</strong>" href="#Papers"><svg class="icon link"><use xlink:href="#link"></use></svg></a></h2></div>
