--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ Network Systems and etc.</p>
     </ul>
 
     <ul>
-        <li style="padding: 2px 0px;"> <b>胡晋彬</b>, 黄家玮, 王建新, 王进. 基于直接拥塞通告的数据中心无损网络传输控制机制. <em><strong>电子学报, 2023.</strong></em><span>&nbsp;</span><a href="" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
+        <li style="padding: 2px 0px;"> <b>胡晋彬</b>, 黄家玮, 王建新, 王进. 基于直接拥塞通告的数据中心无损网络传输控制机制. <em><strong>电子学报, 2023.</strong></em><span>&nbsp;</span><a href="胡晋彬-电子学报-2023.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
     </ul>
     
     <ul>
@@ -149,7 +149,7 @@ Network Systems and etc.</p>
 
     <li style="padding: 2px 0px;">Wenxue Li, Chaoliang Zeng, <b>Jinbin Hu</b>, Kai Chen. Towards Fine-grained and Practical Flow Control for Datacenter Networks. <em><strong>IEEE ICNP, 2023.</strong></em><span>&nbsp;</span><a href="" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
 
-    <li style="padding: 2px 0px;">Wenxue Li, Chaoliang Zeng, <b>Jinbin Hu</b>, Kai Chen. Scaling Switch-driven Flow Control with Aquarius. <em><strong>ACM APNet, 2023.</strong></em><span>&nbsp;</span><a href="" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
+    <li style="padding: 2px 0px;">Wenxue Li, Chaoliang Zeng, <b>Jinbin Hu</b>, Kai Chen. Scaling Switch-driven Flow Control with Aquarius. <em><strong>ACM APNet, 2023.</strong></em><span>&nbsp;</span><a href="liwenxue-apnet-2023.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
       
     <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, <span>&nbsp;</span><u>Yi He</u>, Jin Wang*, Wangqing Luo, Jiawei Huang. RLB: Reordering-Robust Load Balancing in Lossless Datacenter Networks. <em><strong>IEEE ICPP 2023.</strong></em><span>&nbsp;</span><a href="" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
 
@@ -165,7 +165,7 @@ Network Systems and etc.</p>
 
     <li style="padding: 2px 0px;">Dengyong Zhang, En Tan, Feng Li, Shuai Liu, Jing Wang and <b>Jinbin Hu</b>. Image Inpainting Forensics Algorithm Based on Dual-Domain Encoder-Decoder Network. <em><strong>IEEE ICA3PP, 2023.</strong></em><span>&nbsp;</span><a href="" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
 
-    <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, Chaoliang Zeng, Zilong Wang, Hong Xu, Jiawei Huang, Kai Chen. Load Balancing in PFC-Enabled Datacenter Networks. <em><strong>ACM APNet, 2022.</strong></em><span>&nbsp;</span><a href="" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
+    <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, Chaoliang Zeng, Zilong Wang, Hong Xu, Jiawei Huang, Kai Chen. Load Balancing in PFC-Enabled Datacenter Networks. <em><strong>ACM APNet, 2022.</strong></em><span>&nbsp;</span><a href="hujinbin-apnet-2022.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
 
 
   </ul>
