--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@ Network Systems and etc.</p>
 </div>
 <br clear="left" />
 <div class="gdoc-page__anchorwrap"><h2 id="research"><strong>Publications:</strong><a data-clipboard-text="" class="gdoc-page__anchor gdoc-page__anchor--right clip" aria-label="Anchor <strong>Papers:</strong>" href="#Papers"><svg class="icon link"><use xlink:href="#link"></use></svg></a></h2></div>
+<p>(Note on the author list: Underlined are the <u>students</u>.)</p>
 <details open="" style="margin-bottom: 10px;">
     <summary><b>Journal papers</b></summary>
     <ul>
