--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ Network Systems and etc.</p>
     </ul>
 
     <ul>
-        <li style="padding: 2px 0px;"> Jin Wang, <span>&nbsp;</span><u>Shuying Rao</u>, <span>&nbsp;</span><u>Ying Liu</u>, Pradip Kumar Sharma, <b>Jinbin Hu</b>*.  Load Balancing for Heterogeneous Traffic in Datacenter Networks. <em><strong>Journal of Network and Computer Applications, 2023.</strong></em><span>&nbsp;</span><a href="" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
+        <li style="padding: 2px 0px;"> Jin Wang, <span>&nbsp;</span><u>Shuying Rao</u>, <span>&nbsp;</span><u>Ying Liu</u>, Pradip Kumar Sharma, <b>Jinbin Hu</b>*. Load Balancing for Heterogeneous Traffic in Datacenter Networks. <em><strong>Journal of Network and Computer Applications, 2023.</strong></em><span>&nbsp;</span><a href="raoshuying-JNCA-2023.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
     </ul>
 
     <ul>
