--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ Network Systems and etc.</p>
 <details open="" style="margin-bottom: 10px;">
     <summary><b>Journal papers</b></summary>
     <ul>
-        <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, Jiawei Huang, Zhaoyi Li, Jianxin Wang and Tian He.  A Receiver-Driven Transport Protocol with High Link Utilization Using Anti-ECN Marking in Data Center Networks. <em><strong>IEEE Transactions on Network and Service Management, 2023.</strong></em><span>&nbsp;</span><a href="" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
+        <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, Jiawei Huang, Zhaoyi Li, Jianxin Wang and Tian He. A Receiver-Driven Transport Protocol with High Link Utilization Using Anti-ECN Marking in Data Center Networks. <em><strong>IEEE Transactions on Network and Service Management, 2023.</strong></em><span>&nbsp;</span><a href="hujinbin-TRANSACTIONS ON NETWORK AND SERVICE MANAGEMENT-2023.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
     </ul>
 
     <ul>
