--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ Network Systems and etc.</p>
 <ul>
     <li><strong>研三：</strong>何熠(Yi He), 罗望卿(Wangqing Luo), 饶淑莹(Shuying Rao), 贺蔓(Man He)</li>
     <li><strong>研二：</strong>刘颖(Ying Liu), 周子凯(Zikai Zhou)</li>
-    <li><strong>研一：</strong>王友杨(Youyang Wang), 彭宇杰(Yujie Peng), 申厚强(Houqiang Shen), 邓雨生(Yusheng Deng), 智睿(Rui Zhi)</li>
+    <li><strong>研一：</strong>王友杨(Youyang Wang), 彭宇杰(Yujie Peng), 申厚强(Houqiang Shen), 智睿(Rui Zhi), 李睿谦(Ruiqian Li)</li>
 </ul>
 
 <div class="gdoc-page__anchorwrap"><h2 id="fundings"><strong>Fundings:</strong><a data-clipboard-text="" class="gdoc-page__anchor gdoc-page__anchor--right clip" aria-label="Anchor <strong>Fundings:</strong>" href="#fundings"><svg class="icon link"><use xlink:href="#link"></use></svg></a></h2></div>
