--- a/index.html
+++ b/index.html
@@ -101,11 +101,9 @@
 
 <div style="float:left; clear:both;" align="left">
 <img src="\cover.jpg" alt="cover" style="zoom:15%;" align=right hspace="5" vspace="5"/>
-<p>Jinbin Hu received the B.E. and M.E. degrees from Beijing Jiao Tong University, China, in 2008 and 2011, respectively, and the Ph.D. degree in computer science from Central South University, China, in 2020. She is currently a Post-Doc in the Department of Computer Science and Engineering,
-Hong Kong University of Science and Technology, and working in the School of Computer and Communication Engineering, Changsha University of Science and Technology, China. </p>
-<p><strong>Research Area</strong>: Datacenter Networks, RDMA Networking, Learning-based
-Network Systems and etc.</p>
-<p><strong>常年招收硕士生和本科生, 热烈欢迎有读博意愿的优秀同学加入.</strong></p>
+<p>胡晋彬老师分别于2008年和2011年获得中国北京交通大学学士学位和硕士学位，并于2020年获得中南大学计算机科学博士学位，她目前是香港科技大学的博士后。 已发表在 IEEE/ACM TON、IEEE TCC、IEEE TNSM、 IEEE INFOCOM、IEEE ICNP、ACM ICPP 等国际会议和期刊上论文40余篇，其中2篇被评选为“<b>最佳会议论文</b>”。</p>
+<p><strong>研究领域</strong>: 数据中心网络、高性能网络、机器学习系统、可编程网络系统等.</p>
+<p><strong>常年招收硕士生和本科生, 热烈欢迎具有科研热情的优秀同学加入.</strong></p>
 <p><a href="https://huhuzizi.github.io/jinbinhu.github.io/index.html"><u><b><em>胡晋彬主页</em></b></u></a>&nbsp;&nbsp;Email: <a href="mailto:jinbinhu@csust.edu.cn">jinbinhu@csust.edu.cn</a>
 </div>
 <br clear="left" />
