--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 
     <article class="gdoc-markdown">
-        <h1>Hu Jinbin (supervisor)</h1>
+        <h1><a href="https://huhuzizi.github.io/jinbinhu.github.io/index.html"><u><b><em>胡晋彬 (副教授)</em></b></u></a>&nbsp;&nbsp;</h1>
         
 
 
@@ -104,7 +104,7 @@
 <p>胡晋彬老师分别于2008年和2011年获得中国北京交通大学学士学位和硕士学位，并于2020年获得中南大学计算机科学博士学位，她目前是香港科技大学的博士后。 已发表在 IEEE/ACM TON、IEEE TCC、IEEE TNSM、 IEEE INFOCOM、IEEE ICNP、ACM ICPP 等国际会议和期刊上论文40余篇，其中2篇被评选为“<b>最佳会议论文</b>”。</p>
 <p><strong>研究领域</strong>: 数据中心网络、高性能网络、机器学习系统、可编程网络系统等.</p>
 <p><strong>常年招收硕士生和本科生, 热烈欢迎具有科研热情的优秀同学加入.</strong></p>
-<p><a href="https://huhuzizi.github.io/jinbinhu.github.io/index.html"><u><b><em>胡晋彬主页</em></b></u></a>&nbsp;&nbsp;Email: <a href="mailto:jinbinhu@csust.edu.cn">jinbinhu@csust.edu.cn</a>
+<p>Email: <a href="mailto:jinbinhu@csust.edu.cn">jinbinhu@csust.edu.cn</a>
 </div>
 <br clear="left" />
 <div class="gdoc-page__anchorwrap"><h2 id="research"><strong>Publications:</strong><a data-clipboard-text="" class="gdoc-page__anchor gdoc-page__anchor--right clip" aria-label="Anchor <strong>Papers:</strong>" href="#Papers"><svg class="icon link"><use xlink:href="#link"></use></svg></a></h2></div>
