--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 
     <article class="gdoc-markdown">
-        <h1><a href="https://huhuzizi.github.io/jinbinhu.github.io/index.html"><u><b><em>胡晋彬 (副教授)</em></b></u></a>&nbsp;&nbsp;</h1>
+        <h1><a href="https://huhuzizi.github.io/jinbinhu.github.io/index.html"><u><b>胡晋彬 (副教授)</b></u></a>&nbsp;&nbsp;</h1>
         
 
 
