--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
     <ul>
         <li style="padding: 2px 0px;">Wenxue Li, Chaoliang Zeng,<b>Jinbin Hu</b>, Kai Chen. FlowSail: Fine-grained and Practical Flow Control for Datacenter Networks. <em><strong>IEEE/ACM Transactions on Networking, 2024.</strong></em><span>&nbsp;</span><a href="" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
 
-        <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, Yi He, Wangqing Luo, Jiawei Huang, Jin Wang. Enhancing Load Balancing with In-network Recirculation to Prevent Packet Reordering in Lossless Data Centers. <em><strong>IEEE/ACM Transactions on Networking, 2024.</strong></em><span>&nbsp;</span><a href="" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
+        <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, <span>&nbsp;</span><u>Yi He</u>, <span>&nbsp;</span><u>Wangqing Luo</u>, Jiawei Huang, Jin Wang. Enhancing Load Balancing with In-network Recirculation to Prevent Packet Reordering in Lossless Data Centers. <em><strong>IEEE/ACM Transactions on Networking, 2024.</strong></em><span>&nbsp;</span><a href="" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
 
-        <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, Houqiang Shen, Xuchong Liu, Jin Wang. RDMA Transports in Datacenter Networks: Survey. <em><strong>IEEE Network, 2024.</strong></em><span>&nbsp;</span><a href="" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
+        <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, <span>&nbsp;</span><u>Houqiang Shen</u>, Xuchong Liu, Jin Wang. RDMA Transports in Datacenter Networks: Survey. <em><strong>IEEE Network, 2024.</strong></em><span>&nbsp;</span><a href="" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
 
         
         <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, Chaoliang Zeng, Zilong Wang, Junxue Zhang, Kun Guo, Hong Xu, Jiawei Huang, Kai Chen. Load Balancing with Multi-level Signals for Lossless Datacenter Networks. <em><strong>IEEE/ACM Transactions on Networking, 2024.</strong></em><span>&nbsp;</span><a href="" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
