--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="CSUST DCN Lab">
+<meta name="description" content="长沙理工大学研究生">
+<meta name="description" content="长沙理工大学胡晋彬">
 
 <title>CSUST DCN Lab | Homepage</title>
 
@@ -101,7 +103,7 @@
 
 <div style="float:left; clear:both;" align="left">
 <img src="\cover.jpg" alt="cover" style="zoom:15%;" align=right hspace="5" vspace="5"/>
-<p>胡晋彬老师分别于2008年和2011年获得北京交通大学学士学位和硕士学位，并于2020年获得中南大学计算机科学博士学位，她目前还是香港科技大学的博士后。 已发表在 IEEE/ACM TON、IEEE TCC、IEEE TNSM、 IEEE INFOCOM、IEEE ICNP、ACM ICPP 等国际会议和期刊上论文40余篇，其中2篇被评选为“<b>最佳会议论文</b>”。</p>
+<p>胡晋彬老师分别于2008年和2011年获得北京交通大学学士学位和硕士学位，并于2020年获得中南大学计算机科学博士学位，她目前还是香港科技大学的博士后。 已发表在 IEEE/ACM TON、IEEE TCC、IEEE TNSM、 IEEE INFOCOM、IEEE ICNP、IEEE IWQos、ACM ICPP 等国际会议和期刊上论文40余篇，其中2篇被评选为“<b>最佳会议论文</b>”。</p>
 <p><strong>研究领域</strong>: 数据中心网络、高性能网络、机器学习系统、可编程网络系统等.</p>
 <p><strong>常年招收硕士生和本科生, 热烈欢迎具有科研热情的优秀同学加入.</strong></p>
 <p>Email: <a href="mailto:jinbinhu@csust.edu.cn">jinbinhu@csust.edu.cn</a>
