--- a/index.html
+++ b/index.html
@@ -194,9 +194,19 @@
 
 <div class="gdoc-page__anchorwrap"><h4 id="master-students-硕士">Master Students (硕士):<a data-clipboard-text="" class="gdoc-page__anchor gdoc-page__anchor--right clip" aria-label="Anchor Master Students (硕士):" href="#master-students-硕士"><svg class="icon link"><use xlink:href="#link"></use></svg></a></h4></div>
 <ul>
-    <li><strong>研三：</strong>何熠(Yi He), 罗望卿(Wangqing Luo), 饶淑莹(Shuying Rao), 贺蔓(Man He)</li>
-    <li><strong>研二：</strong>刘颖(Ying Liu), 周子凯(Zikai Zhou)</li>
-    <li><strong>研一：</strong>申厚强(Houqiang Shen), 智睿(Rui Zhi), 李睿谦(Ruiqian Li)</li>
+    <li><strong>何熠(Yi He,21级研究生)：</strong> IEEE/ACM Transactions on Networking(CCF A类期刊), IEEE IWQoS(CCF B类会议), ACM ICPP(CCF B类会议), HCIS(中科院二区)</li>
+    <li><strong>罗望卿(Wangqing Luo,21级研究生)：</strong> HCIS(中科院二区), IEEE ICA3PP(CCF C类会议), TII(中科院一区在投)</li>
+    <li><strong>饶淑莹(Shuying Rao,21级研究生)：</strong> JNCA(中科院二区), TII(中科院一区在投)</li>
+    <li><strong>贺蔓(Man He,21级研究生)：</strong> IEEE ICA3PP(CCF C类会议,最佳论文)</li>
+
+
+    <li><strong>刘颖(Ying Liu,22级研究生)：</strong> </strong> ACM ICPP(CCF B类会议),Ad Hoc Networks(中科院二区), IEEE ICA3PP(CCF C类会议), CMC(中科院三区), IEEE ICNP(CCF B类会议,在投)</li>
+    <li><strong>周子凯(Zikai Zhou,22级研究生)：</strong> TNSM(中科院二区,在投), IEEE ISPA(CCF C类会议,在投)</li>
+
+
+    <li><strong>申厚强(Houqiang Shen,23级研究生)：</strong> IEEE Network(中科院二区), CSA(国际会议)</li>
+    <li><strong>智睿(Rui Zhi,23级研究生)：</strong> IEEE Transactions on Computers(CCF A类期刊,在投), IEEE ISPA(CCF C类会议,在投)</li>
+    <li><strong>李睿谦(Ruiqian Li,23级研究生)：</strong> Computer Networks(CCF B类期刊,在投), IEEE ISPA(CCF C类会议,在投)</li>
 </ul>
 
 <div class="gdoc-page__anchorwrap"><h2 id="fundings"><strong>Fundings:</strong><a data-clipboard-text="" class="gdoc-page__anchor gdoc-page__anchor--right clip" aria-label="Anchor <strong>Fundings:</strong>" href="#fundings"><svg class="icon link"><use xlink:href="#link"></use></svg></a></h2></div>
