--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
   <ul>
     <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, <span>&nbsp;</span><u>Ying Liu</u>, Hao Wang, Jin Wang. AutoPipe: Automatic Configuration of Pipeline Parallelism on Shared GPU Cluster. <em><strong>ACM ICPP, 2024.</strong></em><span>&nbsp;</span><a href="AutoPipe-ICPP-2024.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">[PDF]</a></li>
       
-    <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, <span>&nbsp;</span><u>Yi He</u>, <span>&nbsp;</span><u>Wangqing Luo</u>, Jiawei Huang, Jianxin Wang. TaLB: Tensor-aware Load Balancing for Distributed DNN Training Acceleration. <em><strong>IEEE IWQoS, 2024.</strong></em><span>&nbsp;</span><a href="TaLB-IWQos-2024.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">[PDF]</a></li>
+    <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, <span>&nbsp;</span><u>Yi He</u>, <span>&nbsp;</span><u>Wangqing Luo</u>, Jiawei Huang, Jianxin Wang. TaLB: Tensor-aware Load Balancing for Distributed DNN Training Acceleration. <em><strong>IEEE IWQoS, 2024.</strong></em><span>&nbsp;</span><a href="TaLB-IWQoS-2024.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">[PDF]</a></li>
 
-    <li style="padding: 2px 0px;">Jin Wang, <span>&nbsp;</span><u>Houqiang Shen</u>, <span>&nbsp;</span><u>Yusheng Deng</u>, Jing Wang, <b>Jinbin Hu</b>*. APS: Adaptive Priority-aware Sketch with Low Overhead for Heterogeneous Traffic. <em><strong>CSA, 2023.</strong></em><span>&nbsp;</span><a href="APS-CSA-2023.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">[PDF]</a></li>
+    <li style="padding: 2px 0px;"><span>&nbsp;</span><u>Houqiang Shen</u>, Jin Wang, <span>&nbsp;</span><u>Yusheng Deng</u>, Jing Wang, <b>Jinbin Hu</b>*. APS: Adaptive Priority-aware Sketch with Low Overhead for Heterogeneous Traffic. <em><strong>CSA, 2023.</strong></em><span>&nbsp;</span><a href="APS-CSA-2023.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">[PDF]</a></li>
 
-    <li style="padding: 2px 0px;">Jin Wang, <span>&nbsp;</span><u>Yujie Peng</u>, <span>&nbsp;</span><u>Youyang Wang</u>, Jing Wang, <b>Jinbin Hu</b>*. HACC：Hierarchical Automatic Selection of Congestion Control Algorithms. <em><strong>CSA, 2023.</strong></em><span>&nbsp;</span><a href="HACC-CSA-2023.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">[PDF]</a></li>
+    <li style="padding: 2px 0px;"><span>&nbsp;</span><u>Yujie Peng</u>, Jin Wang, <span>&nbsp;</span><u>Youyang Wang</u>, Jing Wang, <b>Jinbin Hu</b>*. HACC：Hierarchical Automatic Selection of Congestion Control Algorithms. <em><strong>CSA, 2023.</strong></em><span>&nbsp;</span><a href="HACC-CSA-2023.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">[PDF]</a></li>
 
 
       
