--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
 <div class="gdoc-page__anchorwrap"><h4 id="master-students-硕士">Master Students (硕士):<a data-clipboard-text="" class="gdoc-page__anchor gdoc-page__anchor--right clip" aria-label="Anchor Master Students (硕士):" href="#master-students-硕士"><svg class="icon link"><use xlink:href="#link"></use></svg></a></h4></div>
 <ul>
     <li><strong>何熠(Yi He,21级研究生)：</strong> IEEE/ACM Transactions on Networking(CCF A类期刊), IEEE IWQoS(CCF B类会议), ACM ICPP(CCF B类会议), HCIS(中科院二区)</li>
-    <li><strong>罗望卿(Wangqing Luo,21级研究生)：</strong> HCIS(中科院二区), IEEE ICA3PP(CCF C类会议), TII(中科院一区在投)</li>
-    <li><strong>饶淑莹(Shuying Rao,21级研究生)：</strong> JNCA(中科院二区), TII(中科院一区在投)</li>
+    <li><strong>罗望卿(Wangqing Luo,21级研究生)：</strong> HCIS(中科院二区), IEEE ICA3PP(CCF C类会议), TII(中科院一区,在投)</li>
+    <li><strong>饶淑莹(Shuying Rao,21级研究生)：</strong> JNCA(中科院二区), TII(中科院一区,在投)</li>
     <li><strong>贺蔓(Man He,21级研究生)：</strong> IEEE ICA3PP(CCF C类会议,最佳论文)</li>
     <br>
    
