--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <li><strong>贺蔓(Man He,21级研究生)：</strong> IEEE ICA3PP(CCF C类会议,最佳论文)</li>
     <br>
    
-    <li><strong>刘颖(Ying Liu,22级研究生)：</strong> </strong> ACM ICPP(CCF B类会议),Ad Hoc Networks(中科院二区), IEEE ICA3PP(CCF C类会议), CMC(中科院三区), IEEE ICNP(CCF B类会议,在投)</li>
+    <li><strong>刘颖(Ying Liu,22级研究生)：</strong> </strong> ACM ICPP(CCF B类会议),Ad Hoc Networks(中科院二区), IEEE ICA3PP(CCF C类会议), CMC(中科院三区), IEEE INFOCOM(CCF A类会议,在投)</li>
     <li><strong>周子凯(Zikai Zhou,22级研究生)：</strong> TNSM(中科院二区,在投), IEEE ISPA(CCF C类会议,在投)</li>
     <br>
 
