--- a/index.html
+++ b/index.html
@@ -201,12 +201,12 @@
     <li><strong>贺蔓(Man He,21级研究生)：</strong> IEEE ICA3PP(CCF C类会议,最佳论文)</li>
     <br>
    
-    <li><strong>刘颖(Ying Liu,22级研究生)：</strong> ACM ICPP(CCF B类会议),Ad Hoc Networks(中科院二区), IEEE ICA3PP(CCF C类会议), CMC(中科院三区), IEEE INFOCOM(CCF A类会议,在投)</li>
+    <li><strong>刘颖(Ying Liu,22级研究生)：</strong> ACM ICPP(CCF B类会议),Ad Hoc Networks(中科院二区), IEEE ICA3PP(CCF C类会议), CMC(中科院四区), IEEE INFOCOM(CCF A类会议,在投)</li>
     <li><strong>周子凯(Zikai Zhou,22级研究生)：</strong> TNSM(中科院二区), IEEE ISPA(CCF C类会议)</li>
     <br>
 
     <li><strong>申厚强(Houqiang Shen,23级研究生)：</strong> IEEE Network(中科院二区), CSA(国际会议)</li>
-    <li><strong>智睿(Rui Zhi,23级研究生)：</strong> IEEE TMC(CCF A类期刊), IEEE ISPA(CCF C类会议)</li>
+    <li><strong>智睿(Rui Zhi,23级研究生)：</strong> IEEE TMC(CCF A类期刊,在投), IEEE ISPA(CCF C类会议)</li>
     <li><strong>李睿谦(Ruiqian Li,23级研究生)：</strong> Computer Networks(CCF B类期刊,在投), IEEE ISPA(CCF C类会议)</li>
 </ul>
 
@@ -214,13 +214,13 @@
 <ul>
     <li>国家自然科学基金青年科学基金项目, 62102046, 基于PFC优先级流控的数据中心无损网络传输控制机制, 2022.01–2024.12, 主持;</li>
 
-    <li>湖南省自然科学基金面上项目, 2022JJ30618, 面向分布式深度神经网络(DNN)的通信优化技术研究，2022.01.1–2024.12.31, 主持;</li>
+    <li>湖南省自然科学基金面上项目, 2022JJ30618, 面向分布式深度神经网络(DNN)的通信优化技术研究，2022.01–2024.12, 主持;</li>
 
     <li>湖南省教育厅青年项目, 22B0300, 数据中心无损网络负载均衡机制研究，2023.1.1-2025.12.31, 主持;</li>
 
-    <li>国家自然科学基金面上项目, 62472050, 面向数据中心容损RDMA网络的高效可扩展传输控制机制研究，2025.1.1-2028.12.31, 主持;</li>
+    <li>国家自然科学基金面上项目, 62472050, 面向数据中心容损RDMA网络的高效可扩展传输控制机制研究，2025.01-2028.12, 主持;</li>
 
-    <li>国家自然科学基金面上项目, 62473146, 面向边缘数据中心网络的智能拥塞控制关键技术研究，2025.1.1-2028.12.31, 合作主持;</li>
+    <li>国家自然科学基金面上项目, 62473146, 面向边缘数据中心网络的智能拥塞控制关键技术研究，2025.01-2028.12, 合作主持;</li>
 </ul>
 
 
