--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 <ul>
     <li><strong>何熠(Yi He,21级研究生)：</strong> 国家奖学金, IEEE/ACM TON(CCF A类期刊), IEEE IWQoS(CCF B类会议), ACM ICPP(CCF B类会议), HCIS(中科院二区)</li>
     <li><strong>罗望卿(Wangqing Luo,21级研究生)：</strong> HCIS(中科院二区), IEEE ICA3PP(CCF C类会议)</li>
-    <li><strong>饶淑莹(Shuying Rao,21级研究生)：</strong> 国家奖学金, JNCA(中科院二区)</li>
+    <li><strong>饶淑莹(Shuying Rao,21级研究生)：</strong> 国家奖学金, IEEE TII(中科院一区), JNCA(中科院二区)</li>
     <li><strong>贺蔓(Man He,21级研究生)：</strong> IEEE ICA3PP(CCF C类会议,最佳论文)</li>
     <br>
    
