--- a/index.html
+++ b/index.html
@@ -166,6 +166,8 @@
     <ul>
         <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, <span>&nbsp;</span><u>Shuying Rao</u>, Min Zhu, Jiawei Huang, Jin Wang. SRCC: Sub-RTT Congestion Control for Lossless Datacenter Networks. <em><strong>IEEE Transactions on Industrial Informatics, 2024.</strong></em><span>&nbsp;</span></li>
 
+        <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, <span>&nbsp;</span><u>Ruiqian Li</u>, <span>&nbsp;</span><u>Ying Liu</u>, Jin Wang. Towards Fine-grained Load Balancing with Dynamical Flowlet Timeout in Datacenter Networks. <em><strong>Computer Networks, 2024.</strong></em><span>&nbsp;</span></li>
+
         <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, <span>&nbsp;</span><u>Zikai Zhou</u>, Jin Zhang. Lightweight Automatic ECN Tuning Based on Deep Reinforcement Learning with Ultra-low Overhead in Datacenter Networks. <em><strong>IEEE Transactions on Network and Service Management, 2024.</strong></em><span>&nbsp;</span></li>
         
         <li style="padding: 2px 0px;">Wenxue Li, Chaoliang Zeng,<b>Jinbin Hu</b>, Kai Chen. FlowSail: Fine-grained and Practical Flow Control for Datacenter Networks. <em><strong>IEEE/ACM Transactions on Networking, 2024.</strong></em><span>&nbsp;</span><a href="FLOWSAIL-TON.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">[PDF]</a></li>
@@ -220,7 +222,7 @@
     <li><strong>申厚强(Houqiang Shen,23级研究生)：</strong> IEEE Network(中科院二区), CSA(国际会议)</li>
     <li><strong>智睿(Rui Zhi,23级研究生)：</strong> IEEE ISPA(CCF C类会议)</li>
     <li><strong>李睿谦(Ruiqian Li,23级研究生)：</strong> IEEE ISPA(CCF C类会议), Computer Network(CCF B类期刊)</li>
-
+    <br>
 
     <li><strong>24级研究生: 唐稳达, 李思瑶, 胡彦文, 张照, 徐鑫明, 杜孟欢, 胡金灵, 李洋, 朱辰晔</strong> </li>
 </ul>
