--- a/index.html
+++ b/index.html
@@ -230,8 +230,12 @@
     <li><strong>智睿(Rui Zhi,23级研究生)：</strong> IEEE ISPA(CCF C类会议)</li>
     <li><strong>李睿谦(Ruiqian Li,23级研究生)：</strong> IEEE ISPA(CCF C类会议), Computer Network(CCF B类期刊)</li>
     <br>
-
-    <li><strong>24级研究生: 唐稳达, 李思瑶, 胡彦文, 张照, 徐鑫明, 杜孟欢, 胡金灵, 李洋, 朱辰晔</strong> </li>
+    
+    <li><strong>李思瑶(Siyao Li,24级研究生)：</strong> MUE&FutureTech(国际会议)</li>
+    <li><strong>杜孟欢(Menghuan Du,24级研究生)：</strong> MUE&FutureTech(国际会议)</li>
+    <li><strong>张照(Zhao Zhang,24级研究生)：</strong> MUE&FutureTech(国际会议)</li>
+    
+    <li><strong>24级研究生: 唐稳达, 胡彦文, 徐鑫明, 胡金灵, 李洋, 朱辰晔</strong> </li>
 </ul>
 
 <div class="gdoc-page__anchorwrap"><h2 id="fundings"><strong>Fundings:</strong><a data-clipboard-text="" class="gdoc-page__anchor gdoc-page__anchor--right clip" aria-label="Anchor <strong>Fundings:</strong>" href="#fundings"><svg class="icon link"><use xlink:href="#link"></use></svg></a></h2></div>
