--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     <br>
 
     <li><strong>申厚强(Houqiang Shen,23级研究生)：</strong> IEEE Network(中科院二区), CSA(国际会议)</li>
-    <li><strong>智睿(Rui Zhi,23级研究生)：</strong> IEEE ISPA(CCF C类会议)</li>
+    <li><strong>智睿(Rui Zhi,23级研究生)：</strong> IEEE ISPA(CCF C类会议),IEEE TII(中科院一区)</li>
     <li><strong>李睿谦(Ruiqian Li,23级研究生)：</strong> IEEE ISPA(CCF C类会议), Computer Network(CCF B类期刊)</li>
     <br>
     
