--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     <ul>
         <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, Jiawei Huang, Zhaoyi Li, Yijun Li, Shuying Rao, Wenchao Jiang, Kai Chen, Jianxin Wang, Tian He. Proactive Transport with High Link Utilization Using Opportunistic Packets in Cloud Data Centers. <em><strong>IEEE Transactions on Mobile Computing (TMC), 2025.</strong></em><span>&nbsp;</span></li>
 
-        <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, <span>&nbsp;</span><u>Rui Zhi</u>, Jin Wang. ARS: Adaptive Routing System for Heterogeneous Traffic in Industrial Data Centers. <em><strong>IEEE Transactions on Industrial Informatics (TII), 2025.</strong></em><span>&nbsp;</span></li>
+        <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, <span>&nbsp;</span><u>Rui Zhi</u>, Jin Wang. ARS: Adaptive Routing System for Heterogeneous Traffic in Industrial Data Centers. <em><strong>IEEE Transactions on Industrial Informatics, 2025.</strong></em><span>&nbsp;</span></li>
 
 
         
